[package]
name = "site_compare"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
auk.workspace = true
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true
opener.workspace = true
pulldown-cmark.workspace = true
similar.workspace = true
slug.workspace = true
walkdir.workspace = true
